--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,12 @@ spring.application.name=EBookStore
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+
+spring.datasource.url=jdbc:postgresql://ep-shy-hall-a6bk1qt2-pooler.us-west-2.aws.neon.tech:5432/ebookstore?sslmode=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_KfT90YXVxyrb
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
