--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,10 +4,18 @@ spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
 
-spring.datasource.url=jdbc:postgresql://ep-shy-hall-a6bk1qt2-pooler.us-west-2.aws.neon.tech:5432/ebookstore?sslmode=require
-spring.datasource.username=neondb_owner
-spring.datasource.password=npg_KfT90YXVxyrb
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+#spring.datasource.url=jdbc:postgresql://ep-shy-hall-a6bk1qt2-pooler.us-west-2.aws.neon.tech:5432/ebookstore?sslmode=require
+#spring.datasource.username=neondb_owner
+#spring.datasource.password=npg_KfT90YXVxyrb
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
+#spring.mvc.throw-exception-if-no-handler-found=true
+#spring.web.resources.add-mappings=false
+
+cloudinary.cloud-name=dafyhvdns
+cloudinary.api-key=584429464839664
+cloudinary.api-secret=CX-dv0tHbdGaVSHzV2SWFkxB_80
+
+
 
