--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,12 @@
 		    <groupId>io.github.cdimascio</groupId>
 		    <artifactId>dotenv-java</artifactId>
 		    <version>2.2.4</version>
-</dependency>
+		</dependency>
+		<dependency>
+		  <groupId>com.cloudinary</groupId>
+		  <artifactId>cloudinary-http44</artifactId>
+		  <version>1.33.0</version>
+		</dependency>
 
 	</dependencies>
 
