--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,5 +17,9 @@ cloudinary.cloud-name=dafyhvdns
 cloudinary.api-key=584429464839664
 cloudinary.api-secret=CX-dv0tHbdGaVSHzV2SWFkxB_80
 
+spring.datasource.url=jdbc:postgresql://db.obkkoviqvxtfjkltfzru.supabase.co:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=2#dLzEsFk2U+gmV
+spring.jpa.hibernate.ddl-auto=update
 
 
