--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,14 @@ cloudinary.cloud-name=dafyhvdns
 cloudinary.api-key=584429464839664
 cloudinary.api-secret=CX-dv0tHbdGaVSHzV2SWFkxB_80
 
-spring.datasource.url=jdbc:postgresql://db.obkkoviqvxtfjkltfzru.supabase.co:5432/postgres
+spring.datasource.url=jdbc:postgresql://db.obkkoviqvxtfjkltfzru.supabase.co:5432/postgres?sslmode=require
 spring.datasource.username=postgres
 spring.datasource.password=2#dLzEsFk2U+gmV
 spring.jpa.hibernate.ddl-auto=update
 
+spring.datasource.hikari.connection-timeout=20000
+spring.datasource.hikari.maximum-pool-size=5
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
 
