--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,10 @@
 		    <version>42.5.0</version>
 		</dependency>
 		<dependency>
+		    <groupId>com.zaxxer</groupId>
+		    <artifactId>HikariCP</artifactId>
+		</dependency>
+		<dependency>
 		    <groupId>com.cloudinary</groupId>
 		    <artifactId>cloudinary-http5</artifactId>
 		    <version>2.0.0</version>
