--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,9 +17,9 @@ cloudinary.cloud-name=dafyhvdns
 cloudinary.api-key=584429464839664
 cloudinary.api-secret=CX-dv0tHbdGaVSHzV2SWFkxB_80
 
-spring.datasource.url=jdbc:postgresql://db.obkkoviqvxtfjkltfzru.supabase.co:5432/postgres?sslmode=require
-spring.datasource.username=postgres
-spring.datasource.password=2#dLzEsFk2U+gmV
+spring.datasource.url=jdbc:postgresql://dpg-d04mf695pdvs73a8082g-a:5432/ebookstore?sslmode=require
+spring.datasource.username=ebookstore_user
+spring.datasource.password=V59XncxViOUQmM4Owgy2CQkSAZQTamel
 spring.jpa.hibernate.ddl-auto=update
 
 spring.datasource.hikari.connection-timeout=20000
